[!] Breaking changes Refactored Nanodb Mitigated to Java21